--- a/app/src/main/res/layout/activity_userprofile.xml
+++ b/app/src/main/res/layout/activity_userprofile.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Userprofile">
 
+
     <TextView
         android:id="@+id/stepcounter"
         android:layout_width="119dp"
@@ -13,18 +14,31 @@
         android:text="Schritte: "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.297" />
 
     <ProgressBar
         android:id="@+id/stepBar"
         style="?android:attr/progressBarStyleHorizontal"
-        tools:progress="50"
-        android:layout_width="117dp"
-        android:layout_height="127dp"
-        tools:layout_editor_absoluteX="171dp"
-        tools:layout_editor_absoluteY="429dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="198dp"
+        android:layout_height="183dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="93dp"
+        android:layout_marginLeft="93dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginRight="120dp"
+        android:layout_marginBottom="218dp"
+        android:indeterminate="false"
+        android:progress="0"
+        android:progressDrawable="@drawable/circular_progress_bar"
+        android:secondaryProgress="300"
+        app:layout_constraintBottom_toTopOf="@+id/reset_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/step_btn"
