--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -203,7 +203,7 @@
             app:layout_constraintVertical_bias="0.644" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/setUserAttributes_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button"
