--- a/app/src/main/res/layout/fragment_challenge_creator.xml
+++ b/app/src/main/res/layout/fragment_challenge_creator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".challenges.WalkingChallenge">
+    tools:context=".challenges.ChallengeCreator">
 
     <Button
         android:id="@+id/create_walking_btn"
@@ -27,18 +27,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.92" />
 
-    <SeekBar
+
+    <com.google.android.material.slider.Slider
         android:id="@+id/steps_seekBar"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
         android:layout_width="260dp"
         android:layout_height="56dp"
-        android:max="20000"
-        android:progress="6000"
-        app:layout_constraintBottom_toTopOf="@+id/create_walking_btn"
+        android:stepSize="1000.0"
+        android:valueFrom="0.0"
+        android:valueTo="20000.0"
+        android:value="6000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/stepcounter_textview"
