--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,8 @@
         android:id="@+id/textView2"
         android:layout_width="200dp"
         android:layout_height="32dp"
-        android:text="Authentifizierung"
+        android:text="Login"
+        android:gravity="center"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +60,7 @@
         android:id="@+id/registerText"
         android:layout_width="284dp"
         android:layout_height="17dp"
-        android:text="Noch kein Account? Hier registrieren!"
+        android:text="@string/noch_kein_account_hier_registrieren"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -71,7 +72,7 @@
         android:id="@+id/forgotPasswort"
         android:layout_width="151dp"
         android:layout_height="21dp"
-        android:text="Passwort vergessen?"
+        android:text="@string/passwort_vergessen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +88,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginText"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswort"
+        app:layout_constraintVertical_bias="0.23000002" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
